Episode 06 search and filter functionality, state behind the scene

--- a/Episod_06-Exploring The World/index.html
+++ b/Episod_06-Exploring The World/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Episod 2</title>
+    <title>Episod 06</title>
 </head>
 <body>
     <div id="root">
-        <h1>Hello</h1>
+        <h1>Not working Rendering</h1>
     </div>
-    <script type="module" src="./app.js"></script>
+    <script type="module" src="./src/App.js"></script>
 </body>
 </html>
